# caneleira

./: .gitignore  BLUEPRINT.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  base_registry.py  mixins.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 3fc4bb5d174a_alter_identifier_column_to_string_10_.py  5fbcdfca9dad_create_cattle_table.py  cd535cc75c40_create_herds_table.py  f7dd1d951a29_add_weight_history_table.py
backend/app/features/cattle/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/features/herd/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/tests/: conftest.py
backend/tests/db/: test_session.py
backend/tests/features/cattle/: test_cattle_service.py  test_repository.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/app/: Providers.tsx
frontend/src/features/cattle/: CattleForm.tsx  constants.ts  types.ts
frontend/src/features/cattle/api/: cattleApi.ts
frontend/src/features/cattle/components/: CattleList.tsx  EditCattleModal.tsx
frontend/src/features/cattle/hooks/: useAddCattle.tsx  useDeleteCattle.tsx  useEditCattle.tsx  useListCattle.tsx
frontend/src/features/cattle/pages/: CattlePage.tsx
frontend/src/routes/: __root.tsx  cattle.tsx
